<resources>
    <string name="app_name">KotlinBoXueGu</string>
    <string name="username">请输入用户名</string>
    <string name="userRegister">注   册</string>
    <string name="userPsw">请输入密码</string>
    <string name="userPswAgain">请再次输入密码</string>
    <string name="user_login">登   录</string>
    <string name="register">立刻注册</string>
    <string name="find_psw">找回密码</string>
    <string name="main_course">课程</string>
    <string name="main_exercises">习题</string>
    <string name="main_exercises_tv">博学谷习题</string>
    <string name="main_my">我</string>
    <string name="main_activity">博学谷课程</string>
    <string name="tv_user_name">点击登录</string>
    <string name="course_history_tv">播放记录</string>
    <string name="userName">请输入用户名</string>
    <string name="psw">请输入密码</string>
    <string name="spPsw">登陆成功</string>
    <string name="spPswPsw">输入用户名和密码不一致</string>
    <string name="noUser">此用户名不存在</string>
    <string name="modify_psw_tv">修改密码</string>
    <string name="security_setting_tv">设置密保</string>
    <string name="exit_login_tv">退出登录</string>
    <string name="setting">设置</string>
    <string name="et_psw">请输入密码</string>
    <string name="et_psw_psw">请再次输入密码</string>
    <string name="et_original_psw">请输入原始密码</string>
    <string name="et_psw_again">请输入新密码</string>
    <string name="et_new_psw_again">请再次输入新密码</string>
    <string name="save">保存</string>
    <string name="user">您的用户名是？</string>
    <string name="user_name">请输入您的用户名</string>
    <string name="name">您的名字是？</string>
    <string name="validate_name">请输入要验证的姓名</string>
    <string name="validate">验证</string>
</resources>
