<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include layout="@layout/main_title_bar" />

    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35sp"
        android:src="@drawable/default_icon"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginStart="35sp"
        android:layout_marginTop="35sp"
        android:layout_marginEnd="35sp"
        android:background="@drawable/register_user_name_bg"
        android:drawableStart="@drawable/user_name_icon"
        android:drawableLeft="@drawable/user_name_icon"
        android:drawablePadding="10sp"
        android:gravity="center_vertical"
        android:hint="@string/username"
        android:maxLines="1"
        android:paddingStart="10sp"
        android:paddingLeft="10sp"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/et_psw"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginStart="35sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="35sp"
        android:background="@drawable/register_user_name_bg"
        android:drawableStart="@drawable/psw_icon"
        android:drawableLeft="@drawable/psw_icon"
        android:drawablePadding="10sp"
        android:gravity="center_vertical"
        android:hint="@string/userPsw"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="10sp"
        android:paddingLeft="10sp"
        android:textColor="#000000"
        android:textColorHint="#a3a3a3"
        tools:ignore="Autofill,RtlSymmetry" />


    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_marginStart="35sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="35sp"
        android:background="@drawable/register_selector"
        android:gravity="center"
        android:importantForAutofill="no"
        android:text="@string/user_login"
        tools:ignore="LabelFor,TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="35sp"
        android:layout_marginLeft="35sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35sp"
        android:layout_marginRight="35sp">

        <TextView
            android:id="@+id/registerTv"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/findPswTv"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/find_psw" />
    </LinearLayout>
</LinearLayout>