<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <include layout="@layout/main_title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15sp"
        android:background="#E3E3E3" />

    <RelativeLayout
        android:id="@+id/rl_modify_psw"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginRight="10sp"
        android:background="#F7F8F8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="25sp"
            android:text="@string/modify_psw_tv"
            android:textColor="#A3A3A3"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="15sp"
            android:layout_height="15sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25sp"
            android:src="@drawable/iv_right_arrow"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E3E3E3" />

    <RelativeLayout
        android:id="@+id/rl_security_setting"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginRight="10sp"
        android:background="#F7F8F8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="25sp"
            android:text="@string/security_setting_tv"
            android:textColor="#A3A3A3"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="15sp"
            android:layout_height="15sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25sp"
            android:src="@drawable/iv_right_arrow"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E3E3E3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15sp"
        android:background="#E3E3E3" />

    <RelativeLayout
        android:id="@+id/rl_exit_login"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginRight="10sp"
        android:background="#F7F8F8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="25sp"
            android:text="@string/exit_login_tv"
            android:textColor="#A3A3A3"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="15sp"
            android:layout_height="15sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25sp"
            android:src="@drawable/iv_right_arrow"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E3E3E3" />
</LinearLayout>